# MobileRobotics_ROB599S15

./: README.md  driver.py  map_mcl.yaml  mcl.py  mymap.pgm  mymap.yaml  stopper.py
lab1/: CMakeLists.txt  package.xml  package.xml~
lab1/launch/: turtlebot_in_stage.launch~
lab1/scripts/: move (copy).py  move.py  move.py~
lab2/: CMakeLists.txt  package.xml
lab2/launch/: b.launch  lab2.launch  lab2.launch~
lab2/scripts/: demo.txt  demo123.txt  move.py~  move2.py~  oo.txt  record.py  record2.py~  stopper.py~  uu.txt
lab2/scripts/old/: Untitled Document  move.py  move2 (copy).py
lab3/: CMakeLists.txt  package.xml
lab3/scripts/: map.py  map.py~  map2.py  map2.py~  move.py  move.py~  record.py~  test.py~  test2.py~  writemap.py~
lab3/scripts/history/: BA.py  read.py  record (copy).py  record 3.py  record.py  test.py  test2.py  write.py
