<?xml version="1.0"?>
<package>
  <name>lab1</name>
  <version>0.1.0</version>
  <description>The lab1 package</description>

  <maintainer email="yux2@onid.orst.edu">fisher</maintainer>

  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/lab1</url> -->


  <author email="yux2@onid.orst.edu">fisher</author>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
